# ophthalmic-classifier-win

./: .gitignore  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/models/: README.md
src-tauri/oct-tf/: Cargo.toml
src-tauri/oct-tf/src/: main.rs
src-tauri/src/: main.rs
src/lib/: Input.svelte  Output.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte
