[package]
name = "app"
version = "0.1.0"
description = "An Ophthalmic Image Classification App"
authors = ["victorvickie"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "fs-create-dir", "fs-write-file",
    "process-command-api",
    "fs-read-dir",
    "fs-exists",
    "shell-open",
    "path-all",
    "dialog-open",
    "shell-sidecar",
    "protocol-asset",
    "fs-read-file",
    "windows7-compat",
] }
dunce = "1.0.4"
chrono = "0.4.31"
chrono-tz = "0.8.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
