[package]
name = "oct-tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
tensorflow = { version = "0.21.0", features = ["eager"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
